--- a/admin_cemter/revisor.css
+++ b/admin_cemter/revisor.css
@@ -44,6 +44,7 @@ body {
 .container {
     display: flex;
     gap: 30px;
+    width: 1500px; /* Ancho normal */
     max-width: 1500px;
     margin: 30px auto; /* Aumentado el margen superior para más espacio */
     padding: 0 20px;
